crates/analyzer/tests/snapshots/errors__mislabeled_call_args_external_contract_call.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: argument label mismatch
   ┌─ compile_errors/mislabeled_call_args_external_contract_call.fe:10:25
   │
10 │     Foo(address(0)).baz(doesnt_exist=1, me_neither=4)
   │                         ^^^^^^^^^^^^ expected `val1`

error: argument label mismatch
   ┌─ compile_errors/mislabeled_call_args_external_contract_call.fe:10:41
   │
10 │     Foo(address(0)).baz(doesnt_exist=1, me_neither=4)
   │                                         ^^^^^^^^^^ expected `val2`


